fix header sticky z-index

--- a/_modalFW.scss
+++ b/_modalFW.scss
@@ -60,7 +60,7 @@
   .ready &{visibility: hidden; opacity: 0;}
 }
 .modalFW__header{line-height: 1.5rem; display: flex; justify-content: flex-end; padding: 0.5rem;
-  .modalFW--headerSticky &{position: sticky; top: calc(var(--modal-p-y,0) * -1); background: inherit;}
+  .modalFW--headerSticky &{position: sticky; top: calc(var(--modal-p-y,0) * -1); background: inherit; z-index: 1;}
   .modalFW--img &{position: absolute; right: 0; left: 0; bottom: 100%;color: #fff; text-shadow: 2px 2px 2px rgba(0,0,0,.5);padding: 0 0 0.25rem; }
 }
 .modalFW__title{font-weight: bold; padding: 0 0 0.75rem; margin: 0.5rem 1.5rem 0 1rem; border-bottom: 1px solid rgba(body(font-color),0.3); flex-grow: 1; line-height: 1.2;visibility: hidden; opacity: 0; transition: opacity 0.4s;
